--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -22,7 +22,7 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
 
 El diagrama de objetivos se presenta con la idea de ser leído de izquierda a derecha. Frecuentemente, tratamos de colocar los objetivos que se suceden entre sí de esta forma para 'simular' los diferentes pasos que se suceden a través del tiempo.
 
-Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias veces debido al tamaño del mismo. Estos gráficos se deben leer como las diferentes partes de un mismo diagrama. Asi, presentamos primero las ramas superiores que engloban los objetivos de más alto nivel y luego mostramos como se va completando cada rama con su diagrama correspondiente.
+Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias veces debido al tamaño del mismo. Estos gráficos se deben leer como las diferentes partes de un mismo diagrama. Así, presentamos primero las ramas superiores que engloban los objetivos de más alto nivel y luego mostramos como se va completando cada rama con su diagrama correspondiente.
 
 \subsubsection{Objetivos principales}
 
@@ -33,14 +33,14 @@ Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias vec
 
 En esta figura se ven los objetivos de mas alto nivel que luego detallamos en las siguientes subsecciones para cada uno de los subobjetivos que aparecen.
 
-\subsubsection{Creacion del proyecto}
+\subsubsection{Creación del proyecto}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=18cm, keepaspectratio]{imagenes/objetivos-creacion-principal.png}
 \end{figure}
 
-Aca se pueden ver los objetivos primarios de Creacion de proyecto, el desgloce se muestra en los proximos graficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparicion de izquierda a derecha.
+Acá se pueden ver los objetivos primarios de Creación de proyecto, el desglose se muestra en los próximos gráficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparición de izquierda a derecha.
 
 \vspace{1em}
 
@@ -49,7 +49,7 @@ Aca se pueden ver los objetivos primarios de Creacion de proyecto, el desgloce s
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-1.png}
 \end{figure}
 
-Desgloce de 'Conocer propuestas del proyecto', primer subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Conocer propuestas del proyecto', primer subobjetivo de 'Mejorar creación de proyecto'.
 
 \vspace{1em}
 
@@ -58,7 +58,7 @@ Desgloce de 'Conocer propuestas del proyecto', primer subobjetivo de 'Mejorar cr
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-2.png}
 \end{figure}
 
-Desgloce de 'Registrar proyecto nuevo y asignar PM en el sistema', segundo subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Registrar proyecto nuevo y asignar PM en el sistema', segundo subobjetivo de 'Mejorar creación de proyecto'.
 
 \vspace{1em}
 
@@ -67,7 +67,7 @@ Desgloce de 'Registrar proyecto nuevo y asignar PM en el sistema', segundo subob
     \includegraphics[width=20cm]{imagenes/objetivos-creacion-3.png}
 \end{figure}
 
-Desgloce de 'Cargar alcance, duracion y condiciones del proyecto', tercer subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Cargar alcance, duración y condiciones del proyecto', tercer subobjetivo de 'Mejorar creación de proyecto'.
 
 \vspace{1em}
 
@@ -76,7 +76,7 @@ Desgloce de 'Cargar alcance, duracion y condiciones del proyecto', tercer subobj
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-4.png}
 \end{figure}
 
-Desgloce de 'Asignar proveedores y pedir validadcion del Gerente', cuarto subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Asignar proveedores y pedir validación del Gerente', cuarto subobjetivo de 'Mejorar creación de proyecto'.
 
 \vspace{1em}
 
@@ -85,7 +85,7 @@ Desgloce de 'Asignar proveedores y pedir validadcion del Gerente', cuarto subobj
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-5.png}
 \end{figure}
 
-Desgloce de 'Validar proveedores y elegir precontrato', quinto subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Validar proveedores y elegir precontrato', quinto subobjetivo de 'Mejorar creación de proyecto'.
 
 \vspace{1em}
 
@@ -94,11 +94,11 @@ Desgloce de 'Validar proveedores y elegir precontrato', quinto subobjetivo de 'M
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-6.png}
 \end{figure}
 
-Desgloce de 'Notificar PM, Gerente y proveedores y firmar contrato', sexto subobjetivo de 'Mejorar crecion de proyecto'.
+Desglose de 'Notificar PM, Gerente y proveedores y firmar contrato', sexto subobjetivo de 'Mejorar creación de proyecto'.
 
 \newpage
 
-\subsubsection{Seleccion mejor PM}
+\subsubsection{Selección mejor PM}
 
 \begin{figure}[H]
     \centering
@@ -107,14 +107,14 @@ Desgloce de 'Notificar PM, Gerente y proveedores y firmar contrato', sexto subob
 
 Podemos ver todos los objetivos que contribuyen a elegir el mejor PM para el proyecto dado.
 
-\subsubsection{Seleccion mejor proveedor}
+\subsubsection{Selección mejores proveedores}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
 \end{figure}
 
-Estos son los subobjetivos principales para elegir los mejores proveedores para el proyecto. El desgloce de los 4 objetivos que quedan en las figuras siguientes.
+Estos son los subobjetivos principales para elegir los mejores proveedores para el proyecto. El desglose de los 4 objetivos que quedan en las figuras siguientes.
 
 \begin{figure}[H]
     \centering
@@ -135,28 +135,28 @@ Segundo subobjetivo que contribuye a 'Lograr conocer cuales son los mejores prov
     \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-3.png}
 \end{figure}
 
-Primer subobjetivo que contribuye a 'Lograr conocer que proveedores estan disponibles y cual es su presupuesto'.
+Primer subobjetivo que contribuye a 'Lograr conocer que proveedores están disponibles y cual es su presupuesto'.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=.5\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-4.png}
 \end{figure}
 
-Segundo subobjetivo que contribuye a 'Lograr conocer que proveedores estan disponibles y cual es su presupuesto'.
+Segundo subobjetivo que contribuye a 'Lograr conocer que proveedores están disponibles y cual es su presupuesto'.
 
 \subsubsection{Seguimiento del proyecto}
 
 \includegraphics[width=\textwidth]{imagenes/seguimiento1.png}
 
-En este grafico se muestran los niveles mas altos de 'Seguimiento de proyecto'. Aca no se ven los refinamientos de 'Mantener estado de proyectos actualizados', que estan en las siguientes figuras.
+En este gráfico se muestran los niveles mas altos de 'Seguimiento de proyecto'. Acá no se ven los refinamientos de 'Mantener estado de proyectos actualizados', que están en las siguientes figuras.
 
 \includegraphics[width=\textwidth]{imagenes/seguimiento2.png}
 
-En este desgloce, se puede apreciar un O-refinamiento en el cual las dos opciones tienen objetivos en comun pero uno agrega la opcion de mantener al PM actualizando obligatoriamente el estado de proyecto cada poco tiempo. Estos objetivos a su vez los desglozamos en las siguientes figuras.
+En este desglose, se puede apreciar un O-refinamiento en el cual las dos opciones tienen objetivos en común pero uno agrega la opción de mantener al PM actualizando obligatoriamente el estado de proyecto cada poco tiempo. Estos objetivos a su vez los desglosamos en las siguientes figuras.
 
 \includegraphics[width=\textwidth]{imagenes/seguimiento3.png}
 
-Aca se puede ver el Y-refinamiento de la primer alternativa.
+Acá se puede ver el Y-refinamiento de la primer alternativa.
 
 \includegraphics[width=\textwidth]{imagenes/seguimiento4.png}
 
@@ -164,14 +164,14 @@ Este es el detalle de la segunda alternativa, muy similar a la primera pero con 
 
 \newpage
 
-\subsubsection{Finalizacion del proyecto}
+\subsubsection{Finalización del proyecto}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
 \end{figure}
 
-Aca se pueden ver los objetivos de mas alto nivel para finalizar un proyecto. Podemos ver que hay un O-refinamiento donde se plantean dos alternativas: en una el proyecto se termina de forma 'normal' y en la otra, adicionalmente, se realizan encuestas para que el Cliente y el Gerente evaluen al PM y el PM evalue a los proveedores que participaron en el proyecto. El detalle de ellas aparece en los proximos graficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparicion de izquierda a derecha.
+Acá se pueden ver los objetivos de mas alto nivel para finalizar un proyecto. Podemos ver que hay un O-refinamiento donde se plantean dos alternativas: en una el proyecto se termina de forma 'normal' y en la otra, adicionalmente, se realizan encuestas para que el Cliente y el Gerente evalúen al PM y el PM evalúe a los proveedores que participaron en el proyecto. El detalle de ellas aparece en los próximos gráficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparición de izquierda a derecha.
 
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion1.png}
 
