Mejoro vistas de Seleccion mejor PM

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -102,10 +102,38 @@ Desglose de 'Notificar PM, Gerente y proveedores y firmar contrato', sexto subob
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=9.3in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-pm-principal.png}
 \end{figure}
 
-Podemos ver todos los objetivos que contribuyen a elegir el mejor PM para el proyecto dado.
+Estos son los subobjetivos principales para elegir el mejor PM para un proyecto dado. El desglose de los subobjetivos queda en las figuras siguientes.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{imagenes/objetivos-seleccion-mejor-pm-1-1.png}
+\end{figure}
+
+Podemos ver el primer subobjetivo de 'Lograr saber cual es el PM idoneo'.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-pm-1-2.png}
+\end{figure}
+
+Podemos ver el segundo subobjetivo de 'Lograr saber cual es el PM idoneo'.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{imagenes/objetivos-seleccion-mejor-pm-2.png}
+\end{figure}
+
+Podemos ver el segundo subobjetivo de 'Lograr selección de mejor PM'.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{imagenes/objetivos-seleccion-mejor-pm-3.png}
+\end{figure}
+
+Podemos ver el tercer subobjetivo de 'Lograr selección de mejor PM'.
 
 \subsubsection{Selección mejores proveedores}
 
@@ -114,7 +142,7 @@ Podemos ver todos los objetivos que contribuyen a elegir el mejor PM para el pro
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
 \end{figure}
 
-Estos son los subobjetivos principales para elegir los mejores proveedores para el proyecto. El desglose de los 4 objetivos que quedan en las figuras siguientes.
+Estos son los subobjetivos principales para elegir los mejores proveedores para el proyecto. El desglose de los 4 objetivos quedan en las figuras siguientes.
 
 \begin{figure}[H]
     \centering
